<resources>
    <string name="app_name">Ribolovac</string>
    <string name="riba_naziv_hint">Unesi naziv ribe</string>
    <string name="riba_amur">Pripada redu Cyprinoformes, podredu Leuciscinae. Ime je dobio po azijskoj rijeci Amur koja je dobrim dijelom granična voda između bivšeg SSSR-a i Kine. Amur živi u gornjem i srednjem toku te velike rijeke. U Kini živi u Žutoj i Crvenoj rijeci. Te su vode u svojim gornjim tokovima brze i naglo teku da bi se niže, nizvodno, razlile i poplavile velika područja.\nAmurova ženka pušta ikru u brzim tokovima, a voda je nosi površinom nizvodno do razlivenih područja gdje je temperatura vode viša od 20°C što je nužno za izvaljivanje ikre i daljnji razvoj amurova mlađa. Ona pušta 30 000 do 800 000 komada ikre koja se, oplođena, spušta površinom rijeke.\n\nAmur je lijepa i pravilno građena riba. Ima dosta široko čelo i lijepe velike ljuske. Leđa su mu zelenkasta, bokovi tamniji, a trbuh svjetliji. Leđna i repna peraja su tamnije, a ostale svjetlije. Može narasti preko metra dužine i tridesetak kilograma težine. Kod nas je spolno zreo u četvrtoj godini pri težini od preko 3 kilograma. Manji mlađ se hrani planktonom, larvama i račićima. Kad poraste, prelazi na biljnu hranu. Brzo raste. Šeste godine može doseći težinu do 5 kilograma.\n\nAmur je prenesen u europski dio bivšeg SSSR-a i dalje u Rumunjsku, Bugarsku i Mađarsku. Prije četrdesetak godina mlađ amura je prenesen iz Mađarske u neka ribnjačarstva bivše Jugoslavije gdje je počeo njegov uzgoj uz šarana. Hrani se vodenim biljem: trskom, mrijesnjakom, vodenom lećom, žabokrečinom, vodenom kugom, rogozom, a jede travu i djetelinu. Pravi je biljožder koji brzo raste.Amur pojede dnevno mnogo vodenog bilja, gotovo toliko koliko je težak. Često ga upotrebljavaju u ribnjacima i za "čišćenje" obraslih vodenih površina. Meso mu je izvrsno. Ipak, postoji problem mriješćenja u našim klimatskim uvjetima. Umjetnim mriješćenjem postižu se rezultati. Vrijeme njegova prirodnog mrijesta pada u doba kada naše rijeke nemaju potrebnu toplinu za njegov mrijest. No čini se da se u zadnje vrijeme prilagodio našim vremenskim uvjetima i temperaturama vode, te se mrijesti. Amur je otporan na neke šaranske bolesti, premda je iz istog roda. \n\nPrema svom vanjskom izgledu najsličniji je našem klenu, premda se odmah može uočiti razlika jer ima znatno manju glavu. U bivšem SSSR-u amur je postao već odavno i riba sportskih ribolovaca pa su ga tamo nasadili i u neke otvorene vode. A i kod nas je već uobičajeno da je amur postao stanovnik zatvorenih voda. Obično su to društveni ribnjaci, bogati vodenim biljem. \n\nSportski ribolovci love ga na komadiće trske, a love ga kao i šarana na kukuruz, žgance, te modernijim i sofisticiranijim metodama kao što su lov "boilom". On je borbena riba i, kad osjeti da je uhvaćen, bori se žestoko. I kao što smo iz dosad iznesenog vidjeli amur je odlična privredna i sportska riba koja je sve više zastupljena u našim vodama.</string>
    <string name="riba_babuska">Babuška potječe iz Sibira, a ima je u Kini i Japanu, odakle se proširila sve do europskih voda, pa i do naših krajeva. Ima je mnogo u rijeci Dravi, odakle je došla u Dunav i Savu. Ima je dosta u Bosutu i pritocima, a javlja se i Kupi. Došla je i s mlađem amura i tolstolobika uvezenim iz Mađarske u neke naše ribnjake pa je iz njih prešla i u otvorene vode. U ribnjacima je postala prava napast jer jede hranu namijenjenu šaranima. Za sportske ribolovce babuška je zanimljiva riba koja pod povoljnim uvjetima naraste više od kilograma težine. U vodama koje se sve više zagađuju i masovno izlovljavaju, babuška je dobrodošla za rekreaciju i zabavu. \n\nBabuška je nešto vitkija od našeg karasa i srebrnaste je boje. Nema brčiće kao šaran i nije velika; obično je dugačka dvadesetak centimetara. Živi u vodama stajačicama, rjeđe u tekućim vodama, ako je dno glibovito a voda toplija. Nešto je manje otporna od karasa. Za tri-četiri godine babuška naraste do dvadesetak centimetara, ženka je tada spolno zrela, a odlaže i do 400000 komada ikre. Budući da ikru ne mora oploditi mužjak babuške, već mužjaci bilo kojih bijelih riba, babuške se brzo šire. Te druge vrste ne oplođuju ikru direktno jer bi u tom slučaju nastali mješanci. Međutim, oni pokreću u jajašcu daljnji razvoj i iz njega će se, iako je neoplođeno, izleći babuška i to uvijek ponovo ženka. Zbog toga babuška ima izuzetne mogućnosti masovnog širenja svoje vrste, što kod drugih ribljih vrsta u našim vodama nije slučaj. Babuška je podložna nekim bolestima i manje je otporna od šarana i karasa. \n\nLovi se kao i karas, udicom. Rado prihvaća glistu, crve ili tijesto. Pribor za ribolov treba biti osjetljiv, a mamac malen. Meso joj je dobro za jelo i nalik je šaranovom. Hrani se crvima i ličinkama iz mulja.</string>
    <string name="riba_cvergl">Kao i pravi som nema ljusaka, na leđnoj peraji i na prsnim perajama ima šiljaste bodlje, kojih je ubod bolan i peče. Glava mu je široka i velika. Oko usta ima 8 brčića. Gornji mu je dio tamnomaslinast do ružičastosmeđ, a donji bijeloprljav. Kod nas naraste do pola kilograma težine, ali obično su primjerci do 20 dkg. \n\nDonesen je iz Sjeverne Amerike i raširio se po našim vodama, a posebno u barama i stajaćicama. Za život mu ne treba mnogo kisika u vodi. Polagano raste i također je svežder pa prihvaća svaki živi mamac. \n\nJede ikru, mlađ, gliste i vodene životinjice. Lovi se na glistu i kederov repić, i to na dnu. On će naći glistu i u gustoj vodenoj travi u bari ili ribnjaku pomoću njuha i svojih opipnih brčića. Javlja se u proljeće čim zatopli i kreće se do kasne jeseni. Zahvalan je objekt za sportske ribolovce jer je vrlo proždrljiv i čvrsto hvata mamac. Obično grize podveče i ranom zorom. \n\nNajčešće ga love priborom na plovak ili se baci udica iz štapa za potezanje opterećena olovom na dno. Meso mu je vrlo dobro i ima gotovo samo kralješnicu bez sitnih koščica.</string>
    <string name="riba_deverika">Tijelo joj je plosnato, s visokim hrptom. Sivkasta je, a prema trbuhu srebrnasta. Peraje su joj sive, a glava malena. Ima dulju i jaku podrepnu peraju i velike ljuske. Kod nas može narasti do 3 do čak 10 kilograma težine. Zadržava se u dubokim i mirnim mjestima u rijeci gdje ima vodenog bilja. Tu ruje tražeći hranu. \n\nHrani se kao i šaran - crvima, ličinkama i biljnim travama. Obično se kreće u jatima, a kod nas je ima u većim količinama u Savi, Dravi i Dunavu. \n\nMrijesti se u svibnju i lipnju, pa na plićim mjestima odlaže sitnu žućkastu ikru na vodeno bilje. Ikru odlaže obično tri do četiri dana za mirnog i tihog vremena. \n\nDeverika je plašljiva riba, pa se najbolje lovi zimskih mjeseci u mutnoj vodi. Lovi se na dnu, laganim priborom na plovak i manjom udicom, i to obično na glistu, krumpir, kruh ili tijesto. Meso joj ima dosta kostiju, ali je ukusno i tečno. Obično je naši ribiči po strani zarežu i jače peku tako da se sitnije koščice preprže.</string>
    <string name="sistemi_dubinski">DUBINSKI SISTEM</string>
    <string name="sistemi_potopljeniplovak">SISTEM SA POTOPLJENIM PLOVKOM</string>
    <string name="sistemi_dubinski_opis">Ovo je identičan sistem kao “usidrena balerina”, ali u ovom slučaju ne koristimo plovak. Koristi se za ribolov na velikim dubinama i na rijekama. Najveća prednost ovog sistema je ribolov na tekućim vodama. Pošto se ne koristi plovak, omogućen je ribolov u jačim riječnim strujama. Na jezerima, možemo zabaciti samo olovo bez predveza, a predvez sa kederom kopčamo na osnovni najlon i puštamo da se kao žičara spušta do virble koja služi kao graničnik. Tako će keder biti pošteđen zabacivanja i pada na površinu vode. Biti će zdrav i u najboljoj formi. Da bi nam sistem “žičare” uspio treba koristiti teža olova i loviti na manjim daljinama. Obično su to dublji dijelovi jezera sa strmom obalom.</string>
    <string name="sistemi_potopljeniplovak_opis">Sistem sa potopljenim plovkom najviše se koristi na rijekama i na većim jezerima, gdje se sistemi pomoću čamca razvlače na velike daljine. Keder nesmije imati kontakt sa dnom jer će se zavuči u travu ili će samo mirno ležati na dnu. Keder će pokušati bilo što koristiti kao zaklon, pa čak i samo dno, gdje će se umiriti i osjećati sigurno. Potopljeni plovak služi da odigne kedera od dna i tako privuče pažnju štuke. Keder će neumorno pokušavati plivati prema dnu, pa će tako i pomicati plovak. Pomicanje plovka može još dodatno privući pažnju štuke, i ostalih grabežljivaca, pa se mogu koristiti plovci upadljivih boja pa čak i sa ugrađenim zvečkama. Na velikm jezerima gdje se pomoću čamca sistemi razvlače na velike daljine, možemo koristiti šaranski pribor i električne indikatore griza. Na većim daljinama od 100 m, korištenje plovka kao indikator griza nije baš najbolji izbor. Probleme bi nam mogli stvarati kiša, magla, vjetar, valovi i sl.</string>
    <string name="sistemi_autor">Autor: Ivan Nikšić</string>
    <string name="vezovi_1_palomar">1. Palomar Knot</string>
    <string name="vezovi_1_palomar_1">1. Poduplati najlon i provući kroz oko</string>
    <string name="vezovi_1_palomar_2">2. Dobiveni kraj provući oko poduplanog najlona, kao pri vezanju pertle</string>
    <string name="vezovi_1_palomar_3">3. Kroz ostatak (vrh) petlje provući udicu</string>
    <string name="vezovi_1_palomar_4">4. Namočiti i stegnuti</string>
    <string name="vezovi_4_unislip">4. Uni Slip Knot</string>
    <string name="vezovi_4_unislip_1">1. Provući najlon kroz oko, držati prstima poduplani dio (na željenoj udaljenosti) te povući dovoljno najlona natrag prema oku</string>
    <string name="vezovi_4_unislip_2">2. Ne puštajući prste, namotavati vrh najlona oko glavnog poduplanog dijela barem 5 puta </string>
    <string name="vezovi_4_unislip_3">3. Povući vrh da bi stegnuli čvor, zatim navlažiti i povlačiti oba kraja najlona dok se čvor ne približi oku</string>
    <string name="vezovi_10_twounijoin">10. Two-Uni Join Knot</string>
    <string name="vezovi_10_twounijoin_1">1. Prisloniti upredenicu i fluorkarbon jedno uz drugo ostavljajući veću dužinu s obje strane, uzeti jedan kraj i napraviti Snell Knot (s upredenicom napraviti petlju i namatati oko fluorkarbona kao i oko udice, te provući vrh kroz samu petlju)</string>
    <string name="vezovi_10_twounijoin_2">2. Uzeti drugi kraj i napraviti Snell Knot (ovaj put s fluorkarbonom napraviti istu stvar)</string>
    <string name="vezovi_10_twounijoin_3">3. Zategnuti oba kraja</string>
    <string name="vezovi_12_j">12. J-Knot</string>
    <string name="vezovi_12_j_1">1. Napraviti petlju sa upredenicom i fluorkarbonom</string>
    <string name="vezovi_12_j_2">2. Ponoviti još jednom (poduplati petlju)</string>
    <string name="vezovi_12_j_3">3. Ponoviti još jednom i zategnuti</string>
    <string name="vezovi_13_doublelineuni">13. Double-Line Uni Knot</string>
    <string name="vezovi_13_doubleuni_1">1. Poduplati najlon i provući ga kroz oko</string>
    <string name="vezovi_13_doubleuni_2">2. Vrh poduplanog najlona vratiti prema oku formirajući petlju</string>
    <string name="vezovi_13_doubleuni_3">3. Namotati poduplani najlon oko glavnog dijela unutar petlje</string>
    <string name="vezovi_13_doubleuni_4">4. Namočiti i zategnuti</string>
    <string name="vezovi_15_arbor">15. Arbor Knot</string>
    <string name="vezovi_15_arbor_1">1. Provući najlon oko špule, prebaciti vrh preko najlona i provući ga kroz rupu bliže špuli, te provući opet kroz novo formiranu rupu</string>
    <string name="vezovi_15_arbor_2">2. Na vrhu najlona napraviti malu petlju</string>
    <string name="vezovi_15_arbor_3">3. Zategnuti obje petlje</string>
    <string name="vezovi_15_arbor_4">4. Povlačiti dok se obje petlje ne približe špuli</string>
</resources>