<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp">


        <TextView
            android:text="@string/vezovi_13_doublelineuni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView25"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/vez_doubleuni_1"
            android:id="@+id/imageView38"
            android:adjustViewBounds="true"/>

        <TextView
            android:text="@string/vezovi_13_doubleuni_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView55"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/vez_doubleuni_2"
            android:id="@+id/imageView39"
            android:adjustViewBounds="true"/>

        <TextView
            android:text="@string/vezovi_13_doubleuni_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView56"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/vez_doubleuni_3"
            android:id="@+id/imageView40"
            android:adjustViewBounds="true"/>

        <TextView
            android:text="@string/vezovi_13_doubleuni_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView57"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/vez_doubleuni_4"
            android:id="@+id/imageView41"
            android:adjustViewBounds="true"/>

        <TextView
            android:text="@string/vezovi_13_doubleuni_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView58"
            android:padding="5dp"/>
    </LinearLayout>

</ScrollView>