<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp">


        <TextView
            android:text="@string/vezovi_10_twounijoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView25"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/vez_twouni_1"
            android:id="@+id/imageView30"
            android:adjustViewBounds="true"/>

        <TextView
            android:text="@string/vezovi_10_twounijoin_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView47"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/vez_twouni_2"
            android:id="@+id/imageView31"
            android:adjustViewBounds="true"/>

        <TextView
            android:text="@string/vezovi_10_twounijoin_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView48"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/vez_twouni_3"
            android:id="@+id/imageView32"
            android:adjustViewBounds="true"/>

        <TextView
            android:text="@string/vezovi_10_twounijoin_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView49"
            android:padding="5dp"/>
    </LinearLayout>

</ScrollView>