<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="#d1e8f7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:text="@string/sistemi_dubinski"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/sistem_dubinski"
            android:id="@+id/imageView7"
            android:adjustViewBounds="true"/>

        <TextView
            android:text="@string/sistemi_dubinski_opis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            android:layout_margin="16dp"/>

        <TextView
            android:text="@string/sistemi_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView22"
            android:padding="5dp"
            android:gravity="right"/>
    </LinearLayout>

</ScrollView>
